--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Badalbaev Timur CV</title>
 	<meta name="description" content="cv Front-end developer Badalbaev T.K.">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/normalize.css" />
+	<link rel="stylesheet" href="css/fonts.css" />
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 	<div class="container">
