refactor: html, css

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<h2 class="headline contacts__heading">Contacts</h2>
 					<ul class="contacts__list">
 						<li class="contacts__item">
-							<h3 class="contacts__headline">
+							<h3 class="contacts__headline contacts__phone">
 								Phone:
 							</h3>
 							
@@ -206,7 +206,7 @@
 			
 					<ul class="skills__list prof-skills__list">
 						<li class="skills__item prof-skills__item">
-							<p class="prof-skills__descr">HTML5,&nbsp;CSS3</p>
+							<p class="prof-skills__descr">HTML5, CSS3</p>
 							<div class="prof-skills__scale prof-skills__90pr"></div>
 						</li>
 	
@@ -216,12 +216,12 @@
 						</li>
 	
 						<li class="skills__item prof-skills__item">
-							<p class="prof-skills__descr">Responsive/Mobile&nbsp;Design</p>
+							<p class="prof-skills__descr">Responsive/Mobile Design</p>
 							<div class="prof-skills__scale prof-skills__85pr"></div>
 						</li>
 	
 						<li class="skills__item prof-skills__item">
-							<p class="prof-skills__descr">Cross-Browser&nbsp;Development</p>
+							<p class="prof-skills__descr">Cross-Browser Development</p>
 							<div class="prof-skills__scale prof-skills__85pr"></div>
 						</li>
 	
@@ -231,12 +231,12 @@
 						</li>
 	
 						<li class="skills__item prof-skills__item">
-							<p class="prof-skills__descr">Git/Version&nbsp;Control</p>
+							<p class="prof-skills__descr">Git/Version Control</p>
 							<div class="prof-skills__scale prof-skills__50pr"></div>
 						</li>
 	
 						<li class="skills__item prof-skills__item">
-							<p class="prof-skills__descr">Figma,&nbsp;Photoshop</p>
+							<p class="prof-skills__descr">Figma, Photoshop</p>
 							<div class="prof-skills__scale prof-skills__66pr"></div>
 						</li>
 	
