--- a/index.html
+++ b/index.html
@@ -69,46 +69,46 @@
 					</ul>
 				</section>
 
-				<section class="section prof-skills skills" id="prof-skills">
+				<section class="section prof-skills" id="prof-skills">
 					<h2 class="headline prof-skills__headline">Professional skills</h2>
 
-					<ul class="skills__list prof-skills__list">
-						<li class="skills__item prof-skills__item">
+					<ul class="prof-skills__list">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">HTML5, CSS3</p>
 							<div class="prof-skills__scale prof-skills__90pr"></div>
 						</li>
 
-						<li class="skills__item prof-skills__item">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">JavaScript/JQuery</p>
 							<div class="prof-skills__scale prof-skills__50pr"></div>
 						</li>
 
-						<li class="skills__item prof-skills__item">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">Responsive/Mobile Design</p>
 							<div class="prof-skills__scale prof-skills__85pr"></div>
 						</li>
 
-						<li class="skills__item prof-skills__item">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">Cross-Browser Development</p>
 							<div class="prof-skills__scale prof-skills__85pr"></div>
 						</li>
 
-						<li class="skills__item prof-skills__item">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">Testing/Debagging</p>
 							<div class="prof-skills__scale prof-skills__70pr"></div>
 						</li>
 
-						<li class="skills__item prof-skills__item">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">Git/Version Control</p>
 							<div class="prof-skills__scale prof-skills__50pr"></div>
 						</li>
 
-						<li class="skills__item prof-skills__item">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">Figma, Photoshop</p>
 							<div class="prof-skills__scale prof-skills__66pr"></div>
 						</li>
 
-						<li class="skills__item prof-skills__item">
+						<li class="prof-skills__item">
 							<p class="prof-skills__descr">Agile-metodoly</p>
 							<div class="prof-skills__scale prof-skills__70pr"></div>
 						</li>
@@ -186,92 +186,97 @@
 					<h2 class="headline">
 						About me
 					</h2>
+          <div class="wrap">
+            <p class="about__descr">
+              I am 33 years old.  I was looking for myself for a long time.  I have been working in different directions, and studying different things. I have tried various types of works and gain a lot of experience and soft, hard skills during it.   A year ago I found myself in web development.  I have studied layout. Now, I am studying JavaScript.  I enjoy developing and would like to work  in this direction.
+            </p>
+          </div>
 
-					<p class="about__descr">
-						I am 33 years old.  I was looking for myself for a long time.  I have been working in different directions, and studying different things. I have tried various types of works and gain a lot of experience and soft, hard skills during it.   A year ago I found myself in web development.  I have studied layout. Now, I am studying JavaScript.  I enjoy developing and would like to work  in this direction.
-					</p>
 				</section>
 
 				<section class="section education" id="education">
 					<h2 class="headline">Education</h2>
 
-					<ul class="education__list">
-						<li class="education__item">
-							<h3 class="education__headline">
-								Web developer
-							</h3>
+          <div class="wrap">
+					  <ul class="education__list">
+              <li class="education__item">
+                <h3 class="education__headline">
+                  Web developer
+                </h3>
 
-							<p class="education__descr">
-								Online school &quot;Skillbox&quot;
-							</p>
+                <p class="education__descr">
+                  Online school &quot;Skillbox&quot;
+                </p>
 
-							<p class="education__descr">
-								2021 (in process…)
-							</p>
-						</li>
+                <p class="education__descr">
+                  2021 (in process…)
+                </p>
+              </li>
 
-						<li class="education__item">
-							<h3 class="education__headline">
-								Software Testing
-							</h3>
+              <li class="education__item">
+                <h3 class="education__headline">
+                  Software Testing
+                </h3>
 
-							<p class="education__descr">
-								Voronezh Institute of High Technologies
-							</p>
+                <p class="education__descr">
+                  Voronezh Institute of High Technologies
+                </p>
 
-							<p class="education__descr">
-								2021
-							</p>
-						</li>
+                <p class="education__descr">
+                  2021
+                </p>
+              </li>
 
-						<li class="education__item">
-							<h3 class="education__headline">
-								Geological Engineer
-							</h3>
+              <li class="education__item">
+                <h3 class="education__headline">
+                  Geological Engineer
+                </h3>
 
-							<p class="education__descr">
-								Saratov State University
-							</p>
+                <p class="education__descr">
+                  Saratov State University
+                </p>
 
-							<p class="education__descr">
-								2014 - 2020
-							</p>
-						</li>
+                <p class="education__descr">
+                  2014 - 2020
+                </p>
+              </li>
 
-						<li class="education__item">
-							<h3 class="education__headline">
-								applied mathematics and computer science (incomplete higher education)
-							</h3>
+              <li class="education__item">
+                <h3 class="education__headline">
+                  applied mathematics and computer science (incomplete higher education)
+                </h3>
 
-							<p class="education__descr">
-								Saratov State University
-							</p>
+                <p class="education__descr">
+                  Saratov State University
+                </p>
 
-							<p class="education__descr">
-								2007 - 2010
-							</p>
-						</li>
+                <p class="education__descr">
+                  2007 - 2010
+                </p>
+              </li>
 
-						<li class="education__item">
-							<h3 class="education__headline">
-								Mechanical engineering technology
-							</h3>
+              <li class="education__item">
+                <h3 class="education__headline">
+                  Mechanical engineering technology
+                </h3>
 
-							<p class="education__descr">
-								College of Radioelectronics
-							</p>
+                <p class="education__descr">
+                  College of Radioelectronics
+                </p>
 
-							<p class="education__descr">
-								2003 - 2007
-							</p>
-						</li>
-					</ul>
+                <p class="education__descr">
+                  2003 - 2007
+                </p>
+              </li>
+            </ul>
+          </div>
 				</section>
 
 				<section class="section code" id="code">
 					<h2 class="headline code__headline">Code examples</h2>
 
-					<pre class="code__descr">
+          <div class="wrap">
+            <pre class="code__descr">
 let button = document.querySelector('.callback__btn');
 let message = document.getElementById('send-mail');
 button.setAttribute('disabled', 'disabled');
@@ -284,13 +289,15 @@ function getFlash() {
     button.removeAttribute('disabled');
     message.classList.remove('is-open');
 }
-					</pre>
+                        </pre>
+          </div>
+
 				</section>
 
 				<section class="section languages" id="languages">
 					<h2 class="headline languages__headline">Languages</h2>
 
-					<div class="languages__subcontainer">
+					<div class="wrap languages__subcontainer">
 						<p class="languages__descr">
 							English
 						</p>
@@ -299,7 +306,6 @@ function getFlash() {
 							A2
 						</p>
 					</div>
-
 				</section>
 			</div>
 		</main>
