--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 								E-mail:
 							</h3>
 
-							<a href="mailto:term1t88@mail.ru" class="contacts__descr">
+							<a class="contacts__descr" href="mailto:term1t88@mail.ru">
 								term1t88@mail.ru
 							</a>
 						</li>
@@ -312,7 +312,7 @@ function getFlash() {
 
 		<footer class="footer">
 			<a href="https://rs.school/js/" target="_blank" class="logo-link">
-				<img src="img/logo.svg" alt="logo 'RS School'" class="logo">
+				<img class="logo" src="img/logo.svg" alt="logo 'RS School'">
 			</a>
 
       <a class="github-link" href="https://github.com/TimBad1" target="_blank">
