fix: add content

--- a/index.html
+++ b/index.html
@@ -315,9 +315,14 @@ function getFlash() {
 				<img class="logo" src="img/logo.svg" alt="logo 'RS School'">
 			</a>
 
-      <a class="github-link" href="https://github.com/TimBad1" target="_blank">
-        My GitHub
-      </a>
+			<div class="footer__wrap">
+				<a class="github-link" href="https://github.com/TimBad1" target="_blank">
+					My GitHub
+				</a>
+
+				<p class="footer__descr">created in 2022</p>
+			</div>
+
 
 			<nav class="nav">
 				<ul class="nav__list">
