--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h1 class="me__name">
 					Timur
 
-					<span class="me__surname">Badalbaev</span>
+					<span class="me__surname">Spektrov</span>
 				</h1>
 
 				<p class="me__descr">
